<resources>
    <string name="app_name">Facilities</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="cancel">Cancel</string>
    <string name="connection_error">Connection Error</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="agree">OK</string>
    <string name="no">NO</string>
    <string name="send_to">Send To</string>
    <string name="success">success</string>
    <string name="internet_connection">Internet Connection Error</string>
    <string name="payment_type">Payment Type</string>
    <string name="installment_amount">Installment Amount</string>
    <string name="due_date">Due Date</string>
    <string name="status">status</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="date_of_payment">Date Of Payment</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="units">Units</string>
    <string name="events">Events</string>
    <string name="my_tickets">My Tickets</string>
    <string name="add">Add Ticket</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_last_name_here">Enter your last name here</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_number_here">Enter your mobile number here</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="enter_your_e_mail_address_here">Enter your e-mail address here</string>
    <string name="password">Password</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="enter_your_first_name_here">Enter your first name here</string>
    <string name="first_name">First Name</string>
    <string name="done">Done</string>
    <string name="forget_your_password">Forget your password ?!</string>
    <string name="or">or</string>
    <string name="title_activity_forget_password">Accounting</string>
    <string name="title_activity_before_login">BeforeLoginActivity</string>
    <string name="registration">Registration</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="lorem_ipsum_dolor_sit_amit_consecteture">lorem ipsum dolor sit amit, consecteture</string>
    <string name="orchestra_projects">Orchestra Projects</string>
</resources>
