<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/first_name"
                android:textColor="@color/colorTextTitle"
                android:textSize="@dimen/_20px" />

            <EditText
                android:id="@+id/edtNameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/enter_your_first_name_here"
                android:inputType="textPersonName"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:textColor="@color/colorTextTitle"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_20px" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorTextHint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/last_name"
                android:textColor="@color/colorTextTitle"
                android:textSize="@dimen/_20px" />

            <EditText
                android:id="@+id/edtLastNameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/enter_your_last_name_here"
                android:inputType="textPersonName"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:textColor="@color/colorTextTitle"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_20px" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorTextHint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/mobile_number"
                android:textColor="@color/colorTextTitle"
                android:textSize="@dimen/_20px" />

            <EditText
                android:id="@+id/edtPhoneRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/enter_your_mobile_number_here"
                android:inputType="phone"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:textColor="@color/colorTextTitle"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_20px" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorTextHint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/e_mail_address"
                android:textColor="@color/colorTextTitle"
                android:textSize="@dimen/_20px" />

            <EditText
                android:id="@+id/edtMailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/enter_your_e_mail_address_here"
                android:inputType="textEmailAddress"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:textColor="@color/colorTextTitle"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_20px" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorTextHint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/password"
                android:textColor="@color/colorTextTitle"
                android:textSize="@dimen/_20px" />

            <EditText
                android:id="@+id/edtPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/enter_your_password_here"
                android:inputType="textPassword"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:textColor="@color/colorTextTitle"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_20px" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorTextHint" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:background="@drawable/button_background_login"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text="@string/done"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_25px"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
