<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.BeforeLoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_80sdp"
        android:src="@drawable/logo_v"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnBeforeLoginRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:background="@drawable/button_background_login"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/registration"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_25px" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorTextHint" />

    <Button
        android:id="@+id/btnBeforeLoginLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/button_background_transparent"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/login"
        android:textColor="@color/colorBtnActive"
        android:textSize="@dimen/_25px" />

</LinearLayout>