<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/e_mail_address"
            android:textColor="@color/colorTextTitle"
            android:textSize="@dimen/_20px" />

        <EditText
            android:id="@+id/edtUserNameForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:hint="@string/enter_your_e_mail_address_here"
            android:inputType="textEmailAddress"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:textColor="@color/colorTextTitle"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_20px"
            tools:ignore="TextFields" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorTextHint" />
    </LinearLayout>

    <Button
        android:id="@+id/btnForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:background="@drawable/button_background_login"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/done"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_25px" />
</RelativeLayout>